src/test/ui/ast-json/issue-78510-assoc-ice.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-78510-assoc-ice.rs:9:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-78510-assoc-ice.rs:14:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0774`.
